fix: date conv to iso on appointment creation (api & web)
